--- a/index.html
+++ b/index.html
@@ -7,41 +7,21 @@
     <script src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
             id="sap-ui-bootstrap"
             data-sap-ui-theme="sap_bluecrystal"
-            data-sap-ui-libs="sap.m">
+            data-sap-ui-libs="sap.m"
+            data-sap-ui-compatVersion="edge"
+            data-sap-ui-preload="async"
+            data-sap-ui-resourceroots='{
+                "sap.ui.demo.wt" : "./"
+            }'>
     </script>
     <script type="text/javascript">
         sap.ui.getCore().attachInit(function() {
             // create a mobile app and display page1 init
-            var app = new sap.m.App( "myApp", {
-                initialPage: "page1"
+            sap.ui.xmlview({
+                viewName : "sap.ui.demo.wt.view.App"
+            }).placeAt("content");
             });
-            // create the first page
-            var page1 = new sap.m.Page("page1",{
-                title : "Hello World",
-                showNavButton : false,
-                content : new sap.m.Button({
-                    text : "Go to Page 2",
-                    press : function () {
-                        //navigate to page2
-                        app.to("page2");
-                    }
-                })
-            });
-            //create the second page with a back button
-            var page2 = new sap.m.Page("page2", {
-                title : "Hello page 2",
-                showNavButton : true,
-                navButtonPress : function () {
-                    // go back to the previous pgae
-                    app.back();
-                }
-            });
-            // add both pages to the app
-            app.addPage(page1).addPage(page2);
-            //place the app into the HTML document
-            app.placeAt("content");
-        });
-    </script>
+   </script>
 </head>
 <body class="sapUiBody" id="content">
 
