--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script type="text/javascript">
         sap.ui.getCore().attachInit(function() {
             // create a mobile app and display page1 init
-            sap.ui.xmlview({
-                viewName : "sap.ui.demo.wt.view.App"
+            new sap.ui.core.ComponentContainer({
+               name : "sap.ui.demo.wt"
             }).placeAt("content");
             });
    </script>
