--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             }'>
     </script>
     <script type="text/javascript">
-        sap.ui.getCore().attachInit(function() {
+        sap.ui.getCore().attachInit(function () {
             // create a mobile app and display page1 init
-            new sap.ui.core.ComponentContainer({
-               name : "sap.ui.demo.wt"
+            new sap.m.Shell({
+                app: new sap.ui.core.ComponentContainer({
+                    name: "sap.ui.demo.wt",
+                    height: "100%"
+                })
             }).placeAt("content");
-            });
+        });
    </script>
 </head>
 <body class="sapUiBody" id="content">
